--- a/src/components/taskCard/taskCard.module.css
+++ b/src/components/taskCard/taskCard.module.css
@@ -11,25 +11,32 @@
 }
 
 .taskBtn{
-    padding-inline: 0.125rem;
+    /* padding: 0rem; */
+    border: none;
+    line-height: normal;
 }
 
 .rewardImage{
     width: 2.1rem;
     height: 2.1rem;
 }
+.rewardTextContainer{
+    overflow: hidden;
+}
 
 .rewardText{
-    font-size: 0.75rem;
+    font-size: 0.875rem;
+    font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 120px;
 }
 
 @media (min-width: 320px) {
     .rewardImage{
         width: 2.5rem;
         height: 2.5rem;
-    }
-    .taskBtn{
-        padding-inline: 0.5rem;
     }
 }
 
@@ -50,9 +57,29 @@
         width: 3rem;
         height: 3rem;
     }
-    .taskBtn{
-        padding-inline: 0.675rem;
+}
+
+@media (min-width: 390px) {
+    .motBox{
+        padding: 0.75rem;
     }
+    .motBox .taskContainer{
+        gap: 1.25rem;
+    }
+    .rewardImage{
+        width: 2.75rem;
+        height: 2.75rem;
+    }
+    .rewardText{
+        max-width: 100%;
+    }
+    .rewardValueText{
+        padding: 0.25rem;
+    }
+    .taskBtn{
+        padding: 0.375rem 1rem ;
+    }
+    
 }
 
 @media (min-width: 420px) {
@@ -61,9 +88,6 @@
     }
     .rewardText{
         font-size: 1rem;
-    }
-    .taskBtn{
-        padding-inline: 0.75rem;
     }
     .rewardImage{
         width: 3.5rem;
