--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
-*,*::before,*::after { box-sizing: border-box; }
-html, body, #root { height: 100%; }
-body { margin: 0; } 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: "Lato", sans-serif;
+}
